--- a/assets/scss/components/_toolBar.scss
+++ b/assets/scss/components/_toolBar.scss
@@ -14,6 +14,7 @@
       .line-header{
         position: absolute;
         bottom: 0;
+        user-select: none;
       }
 
       .header-content{
