--- a/assets/scss/_style.scss
+++ b/assets/scss/_style.scss
@@ -30,7 +30,15 @@
 .overflow-{
   &hidden{
     overflow: hidden !important;
+    display: block;
   }
+  &auto{
+    overflow: auto !important;
+  }
+}
+
+.text-center{
+  text-align: center !important;
 }
 
 .bulba{
