--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -3,7 +3,10 @@
 @import 'fill';
 @import 'text';
 @import 'shadow';
+@import 'size';
 //components
 @import 'components/toolBar';
+@import 'components/chip';
+@import 'components/input';
 
 @import 'style';
