--- a/assets/scss/_text.scss
+++ b/assets/scss/_text.scss
@@ -26,4 +26,25 @@
       color: $third-brand-color-dark !important;
     }
   }
+
+  &text--{
+    &h1{
+      font-size: $text-h1 !important;
+    }
+    &h2{
+      font-size: $text-h2 !important;
+    }
+    &h3{
+      font-size: $text-h3 !important;
+    }
+    &h4{
+      font-size: $text-h4 !important;
+    }
+    &h5{
+      font-size: $text-h5 !important;
+    }
+    &h6{
+      font-size: $text-h6 !important;
+    }
+  }
 }
