--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -16,3 +16,11 @@ $header-size: 120px;
 
 $shadow-color: rgba(0,0,0,0.15);
 $round: 10px;
+
+//text size
+$text-h1: 36px;
+$text-h2: 24px;
+$text-h3: 18px;
+$text-h4: 16px;
+$text-h5: 14px;
+$text-h6: 12px;
