--- a/assets/scss/components/_toolBar.scss
+++ b/assets/scss/components/_toolBar.scss
@@ -23,6 +23,7 @@
         .items-{
           &left{
             height: 100%;
+            width: 200px;
             .round-icon{
               display: block;
               width: 25px;
