--- a/assets/scss/_size.scss
+++ b/assets/scss/_size.scss
@@ -2,7 +2,7 @@
   &img--{
     &sz1{
       width: 180px !important;
-      height: 100px !important;
+      height: 180px !important;
     }
     &sz2{
       width: 142px !important;
@@ -11,6 +11,11 @@
     &sz3{
       width: 60px !important;
       height: 50px !important;
+    }
+    &cover{
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
     }
   }
 }
