--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -4,13 +4,18 @@ $primary-brand-color-dark: darken($primary-brand-color, 10%);
 $secundary-brand-color: #66C7F7;
 $secundary-brand-color-light: lighten($secundary-brand-color, 10%);
 $secundary-brand-color-dark: darken($secundary-brand-color, 10%);
-$third-brand-color: #313131;
-$third-brand-color-light: #313131;
+$third-brand-color: #1A1A1A;
+$third-brand-color-light: #303030;
 $third-brand-color-dark: #1A1A1A;
 
 $success: #77D95A;
 $alert: #FEC91A;
 $danger: #F8604A;
+
+//pokemon type colors
+$type-grass-color: #9BCC50;
+$type-poison-color: #B97FC9;
+$type-fire-color: #FD7D24;
 
 $header-size: 120px;
 
