add: flying type color

--- a/assets/scss/_fill.scss
+++ b/assets/scss/_fill.scss
@@ -46,4 +46,7 @@
   &Fire{
     background-color: $type-fire-color;
   }
+  &Flying{
+    background-image: linear-gradient($type-flying-color-1 50%, $type-flying-color-2 50%);
+  }
 }
