--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -16,6 +16,8 @@ $danger: #F8604A;
 $type-grass-color: #9BCC50;
 $type-poison-color: #B97FC9;
 $type-fire-color: #FD7D24;
+$type-flying-color-1: #3DC7EF;
+$type-flying-color-2: #BDB9B8;
 
 $header-size: 120px;
 
