--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -18,6 +18,7 @@ $type-poison-color: #B97FC9;
 $type-fire-color: #FD7D24;
 $type-flying-color-1: #3DC7EF;
 $type-flying-color-2: #BDB9B8;
+$type-water-color: #4592C4;
 
 $header-size: 120px;
 
