--- a/assets/scss/_fill.scss
+++ b/assets/scss/_fill.scss
@@ -52,4 +52,19 @@
   &Water{
     background-color: $type-water-color; 
   }
+  &Bug{
+    background-color: $type-bug-color;
+  }
+  &Normal{
+    background-color: $type-normal-color;
+  }
+  &Electric{
+    background-color: $type-electric-color;
+  }
+  &Ground{
+    background-image: linear-gradient($type-ground-color-1 50%, $type-ground-color-2 50%);
+  }
+  &Fairy{
+    background-color: $type-fairy-color;
+  }
 }
