--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -19,6 +19,12 @@ $type-fire-color: #FD7D24;
 $type-flying-color-1: #3DC7EF;
 $type-flying-color-2: #BDB9B8;
 $type-water-color: #4592C4;
+$type-bug-color: #729F3F;
+$type-normal-color: #A4ACAF;
+$type-electric-color: #EED535;
+$type-ground-color-1: #F7DE3F;
+$type-ground-color-2: #AB9842;
+$type-fairy-color: #FDB9E9;
 
 $header-size: 120px;
 
