--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -37,11 +37,15 @@ $type-ice-color: #51C4E7;
 $type-steel-color: #9EB7B8;
 $type-fighting-color: #D56723;
 
+$layer-color: rgba(#000, .4);
+
 
 $header-size: 120px;
 
 $shadow-color: rgba(0,0,0,0.15);
-$round: 10px;
+$round: 6px;
+$round-2: 10px;
+$round-3: 20px;
 
 //text size
 $text-h1: 36px;
