--- a/assets/scss/components/_chip.scss
+++ b/assets/scss/components/_chip.scss
@@ -4,7 +4,7 @@
       display: inline-block;
       min-width: 93px;
       height: 23px;
-      border-radius: $round;
+      border-radius: $round-2;
       text-align: center;
   }
 }
