--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -9,5 +9,8 @@
 @import 'components/chip';
 @import 'components/input';
 @import 'components/progressBar';
+@import 'components/buttons';
+@import 'components/dialog';
+@import 'components/forms';
 
 @import 'style';
