--- a/assets/scss/components/_input.scss
+++ b/assets/scss/components/_input.scss
@@ -1,16 +1,54 @@
-.pok-{
-  $input-color: #686868;
-  $input-text-color: #fff;
-  &input-text-search{
+.pok-input-{
+  $input-color: #E3E1E1;
+  $input-text-color: rgba(#000, 0.5);
+  $input-search-color: #686868;
+  $input-search-text-color: #fff;
+  
+  &text{
+    .v-input__slot{
+      background-color: $input-color !important;
+      // border: 2px solid transparent !important;
+      border-radius: $round;
+      .v-text-field__slot{
+        label{
+          color: $input-text-color !important;
+        }
+      }
+
+      &::after,
+      &::before{
+        display: none;
+      }
+    }
+
+    &.v-input--is-focused{
+      .v-input__slot{
+        // border-color: $secundary-brand-color !important;
+
+        .v-text-field__slot{
+          label{
+            color: $input-text-color !important;
+          }
+        }
+
+        &::after,
+        &::before{
+          display: none;
+        }
+      }
+    }
+  }
+
+  &text-search{
     width: 100%;
     height: 61px;
     .v-input__slot{
       height: 61px;
-      background: $input-color;
-      border-color: $input-text-color !important;
+      background: $input-search-color;
+      border-color: $input-search-text-color !important;
       .v-text-field__slot{
         input{
-          color: $input-text-color !important;
+          color: $input-search-text-color !important;
           padding: 0 20px;
           font-size: $text-h3;
         }
@@ -21,7 +59,7 @@
           top: 15px;
           right: 20px;
           i{
-            color: $input-text-color !important;
+            color: $input-search-text-color !important;
           }
         }
       }
@@ -29,7 +67,7 @@
     &.v-input--is-focused{
       .v-input__slot{
         &::after{
-          border-color: $input-text-color !important;
+          border-color: $input-search-text-color !important;
         }
       }
     }
