--- a/assets/scss/_size.scss
+++ b/assets/scss/_size.scss
@@ -8,7 +8,15 @@
       width: 142px !important;
       height: auto !important;
     }
+    &sz2{
+      width: 142px !important;
+      height: auto !important;
+    }
     &sz3{
+      width: 70px !important;
+      height: auto !important;
+    }
+    &sz4{
       width: 60px !important;
       height: 50px !important;
     }
