--- a/assets/scss/_team.scss
+++ b/assets/scss/_team.scss
@@ -6,7 +6,23 @@
   .pok-team-tab{
     height: 100px;
     .pok-team-tab-item{
+      width: 100%;
+      height: 100%;
+      overflow: hidden;
 
+      img{
+        position: relative;
+        top: 10px;
+      }
+      p{
+        position: relative;
+        top: 0px;
+      }
     }
   }
+
+  .pok-team-content{
+    height: calc(100% - 80px) !important;
+  }
+
 }
