--- a/assets/scss/components/_input.scss
+++ b/assets/scss/components/_input.scss
@@ -8,7 +8,7 @@
     .v-input__slot{
       background-color: $input-color !important;
       // border: 2px solid transparent !important;
-      border-radius: $round;
+      border-radius: $round !important;
       .v-text-field__slot{
         height: 10px !important;
         label{
@@ -57,6 +57,16 @@
         }
       }
     }
+
+    &.no-label{
+      .v-input__control{
+        .v-input__slot{
+          input{
+            top: -11px !important;
+          }
+        }
+      }
+    }
   
     &.opt--{
       &dark{
@@ -86,7 +96,7 @@
     width: 100%;
     height: 61px;
     .v-input__slot{
-      height: 61px;
+      height: 45px;
       background: $input-search-color;
       border-color: $input-search-text-color !important;
       .v-text-field__slot{
@@ -99,7 +109,7 @@
       .v-input__append-inner{
         .v-input__icon{
           position: relative;
-          top: 15px;
+          top: 7px;
           right: 20px;
           i{
             color: $input-search-text-color !important;
