--- a/assets/scss/_text.scss
+++ b/assets/scss/_text.scss
@@ -53,5 +53,8 @@
     &underline{
       text-decoration: underline !important;
     }
+    &upper{
+      text-transform: uppercase !important;
+    }
   }
 }
