--- a/assets/scss/_style.scss
+++ b/assets/scss/_style.scss
@@ -41,6 +41,10 @@
   }
 }
 
+.pok-border{
+  border-bottom: 2px solid rgba(#fff, .2);
+}
+
 .overflow-{
   &hidden{
     overflow: hidden !important;
