--- a/assets/scss/_fill.scss
+++ b/assets/scss/_fill.scss
@@ -95,4 +95,13 @@
   &Fighting{
     background-color: $type-fighting-color;
   }
+  &Physical{
+    background-color: $move-physical-color;
+  }
+  &Status{
+    background-color: $move-status-color;
+  }
+  &Special{
+    background-color: $move-special-color;
+  }
 } 
