--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -38,6 +38,10 @@ $type-ice-color: #51C4E7;
 $type-steel-color: #9EB7B8;
 $type-fighting-color: #D56723;
 
+$move-physical-color: #C92112;
+$move-status-color: #8C888C;
+$move-special-color: #4F5870;
+
 $layer-color: rgba(#000, .4);
 
 
